<?xml version="1.0" encoding="utf-8"?><!--

  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.newQuestion.NewQuestionFragment">

    <data>

        <variable
            name="newQuestionViewModel"
            type="com.example.android.navigation.newQuestion.NewQuestionViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/newframeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView4"
                style="@style/title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/title_name"
                app:layout_constraintBottom_toTopOf="@+id/newquestionImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.445"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.555" />

            <ImageView
                android:id="@+id/newquestionImage"
                android:layout_width="0dp"
                android:layout_height="@dimen/image_header_height"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginTop="72dp"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/ic_baseline_design_services_24" />

            <EditText
                android:id="@+id/newquestionText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/question_horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginEnd="@dimen/question_horizontal_margin"
                android:fontFamily="sans-serif"
                android:hint="Question sentences"
                android:textSize="@dimen/question_text_size"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintBottom_toTopOf="@+id/correctAnswerEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newquestionImage" />

            <Button
                android:id="@+id/newsubmitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/submit_button"
                android:textSize="@dimen/button_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wrongThreeEditText" />

            <EditText
                android:id="@+id/correctAnswerEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:hint="Correct answer"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/wrongOneEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newquestionText" />

            <EditText
                android:id="@+id/wrongOneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:hint="wrong answer 1"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/wrongTwoEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/correctAnswerEditText" />

            <EditText
                android:id="@+id/wrongTwoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:hint="wrong answer 2"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/wrongThreeEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wrongOneEditText" />

            <EditText
                android:id="@+id/wrongThreeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:hint="wrong answer 3"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/newsubmitButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wrongTwoEditText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>