...
                    android:text="@{gameViewModel.forthAnswer}"
                    android:textSize="@dimen/answer_text_size"
                    tools:text="Red" />
            </RadioGroup>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/question_horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginEnd="@dimen/question_horizontal_margin"
                android:text="@string/submit_button"
...
